# lms-learning-analytics-platform

./: .gitignore  .replit  README.md  app.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted-You-are-an-expert-Python-Streamlit-and-data-science-engineer-I-want-you-to-build-a-COMPLETE-P-1764601509991_1764601509992.txt
config/: __init__.py  styles.py
data/notebooks/: dataSet_preprocessing.ipynb
data/processed/: lms_clean.csv
models/pretrained/: agglomerative_k4.pkl  gmm_k4.pkl  kmeans_k4.pkl  scaler.pkl
project-report/: documentation.md
scripts/: generate_models.py
utils/: __init__.py  clustering.py  constants.py  dataset_utils.py  helpers.py  pdf_generator.py
views/: __init__.py  about.py  cluster_count.py  cluster_interpretation.py  dashboard.py  dataset_overview.py  eda.py  home.py  model_training.py  prediction.py  time_series.py  upload.py  vle_engagement.py
